--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,8 @@
 			<p>This is a list of the lessons that I have done.</p>
 		
 		
+		<!--Lesson list-->
+		
 		<ul>
 			<li>
 			<a href = "./lesson1.html" target-"_blank>Lesson1</a>
@@ -59,7 +61,7 @@
 			</li>
 			
 		</ul>
-
+		<!--End of Lesson list-->
 
 	</body>
 </html>
